<?xml version="1.0"?>
<package format="2">
  <name>ground_preproc</name>
  <version>0.0.0</version>
  <description>cv pipeline: image preprocessing for navigation camera</description>

  <maintainer email="74739268+gnoccoalpesto@users.noreply.github.com">francesco</maintainer>

  <license>TODO</license>


  <!-- <url type="website">http://wiki.ros.org/ercam1</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
